...
                    .frame(minHeight: 186)
                }
                .navigationBarTitleDisplayMode(.inline)
                .navigationBarBackButtonHidden(true)
                .toolbar {
                    ToolbarItem(placement: .principal) {
                        Text("Выберите способ оплаты")
                            .font(.system(size: 17, weight: .bold))
                            .foregroundStyle(Color(.tBlack))
                    }
                    ToolbarItem(placement: .navigationBarLeading) {
                        Button(action: {
                            dismiss()
...
